mobile design completed

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             <!-- urls -->
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#">About</a</li>
-          <li><a href="#">Contact</a</li>
-          <li><a href="#">Blog</a</li>
-          <li><a href="#">Careers</a</li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Careers</a></li>
         </ul><!-- end of urls -->
 
           <!-- request invite links -->
@@ -50,18 +50,20 @@
           <a href="#">Request Invite</a>
         </div>
       </div> <!-- end of urls -->
-    </nav><!-- end of logo and nav links -->
 
-        <!-- menu for mobile -->
-    <div class="nav_mobile">
+      <!-- menu for mobile -->
+    <div class="closeNav">
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#">About</a</li>
-        <li><a href="#">Contact</a</li>
-        <li><a href="#">Blog</a</li>
-        <li><a href="#">Careers</a</li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Careers</a></li>
       </ul>
     </div><!--end of menu for mobile -->
+    
+    </nav><!-- end of logo and nav links -->
+
 
         <!-- hero section -->
     <div class="hero">
@@ -221,5 +223,7 @@
     </div>
   </footer>
 
+
+<script src='index.js'></script>
 </body>
 </html>
