completed scroll effect on the hero section

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <!-- hero section -->
     <div class="hero">
-      <div>
+      <div class="sub-hero">
       <div class="hero-content">
         <h1>Next generation digital banking</h1>
         <p>Take your financial life online. Your Easybank account will be a one-stop-shop
