--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <!-- hero section -->
     <div class="hero">
-      <div class="sub-hero">
+      <div class="sub-hero scroll-in">
       <div class="hero-content">
         <h1>Next generation digital banking</h1>
         <p>Take your financial life online. Your Easybank account will be a one-stop-shop
@@ -86,30 +86,32 @@
   <main>
         <!-- choosing easybanking -->
     <div class="easybank_choose">
-      <h2>Why choose Easybank?</h2>
-      <p>We leverage Open Banking to turn your bank account into your financial hub. Control
+      <div class="easybank_choose_text disappear">
+        <h2>Why choose Easybank?</h2>
+        <p>We leverage Open Banking to turn your bank account into your financial hub. Control
         your finances like never before.</p>
+      </div>
           <!-- easybanking options -->
       <div class="options">
-        <div class="options_content">
+        <div class="options_content disappear">
           <img src="./images/icon-online.svg" alt="online banking">
           <h4>Online Banking</h4>
           <p>Our modern web and mobile applications allow you to keep track of your finances
             wherever you are in the world.</p>
         </div>
-        <div class="options_content">
+        <div class="options_content disappear">
           <img src="./images/icon-budgeting.svg" alt="Simple Budgeting">
           <h4>Simple Budgeting</h4>
           <p>See exactly where your money goes each month. Receive notifications when you’re
             close to hitting your limits.</p>
         </div>
-        <div class="options_content">
+        <div class="options_content disappear">
           <img src="./images/icon-onboarding.svg" alt="Fast Onboarding">
           <h4>Fast Onboarding</h4>
           <p>We don’t do branches. Open your account in minutes online and start taking control
             of your finances right away.</p>
         </div>
-        <div class="options_content">
+        <div class="options_content disappear">
           <img src="./images/icon-api.svg" alt="Open API">
           <h4>Open API</h4>
           <p>Manage your savings, investments, pension, and much more from one account. Tracking
@@ -119,10 +121,10 @@
     </div><!-- end of choosing easybanking -->
 
     <div class="articles">
-      <h2>Latest Articles</h2>
+      <h2 class="disappear">Latest Articles</h2>
           <!-- card format -->
       <div class="articles-details">
-        <div class="articles-component">
+        <div class="articles-component disappear">
           <img src="./images/image-currency.jpg" alt="">
           <div>
             <p>By Claire Robinson</p>
@@ -131,7 +133,7 @@
               forced to only receive money in a single …</p>
           </div>
         </div>
-        <div class="articles-component">
+        <div class="articles-component disappear">
           <img src="./images/image-restaurant.jpg" alt="">
           <div>
             <p>By Wilson Hutton</p>
@@ -140,7 +142,7 @@
               realistic limits each month. That means you …</p>
           </div>
         </div>
-        <div class="articles-component">
+        <div class="articles-component disappear">
           <img src="./images/image-plane.jpg" alt="">
           <div>
             <p>By Wilson Hutton</p>
@@ -149,7 +151,7 @@
               while you’re abroad. We’ll even show you …</p>
           </div>
         </div>
-        <div class="articles-component">
+        <div class="articles-component disappear">
           <img src="./images/image-confetti.jpg" alt="">
           <div>
             <p>By Claire Robinson</p>
@@ -165,7 +167,7 @@
 
   <footer>
 
-    <div class="footer-content">
+    <div class="footer-content scroll-in">
       <div class="first-footer-content">
       <div class="footer-logo">
         <div class="footer-easybank-logo">
